--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,5 @@ app.*.map.json
 /android/app/release
 
 # firebase credentials
-lib/utils/firebase_web_credentials.dart
+/lib/utils/firebase_web_credentials.dart
+/android/app/google-services.json
