--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ app.*.map.json
 # firebase credentials
 /lib/utils/firebase_web_credentials.dart
 /android/app/google-services.json
+/lib/firebase_options.dart
